[project]
name = "hal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dacite>=1.9.2",
    "python-dotenv>=1.2.1",
 "watermark>=2.5.0",
]

[project.optional-dependencies]
plot = ["altair>=6.0.0", "solara>=1.54.0"]
cluster = ["dask>=2025.11.0"]


[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"


[tool.uv.build-backend]
module-name = "hal"
module-root = ""
